Renamed molly.maps to molly.apps.places.

--- a/branches/extracting_oxford/molly/molly/apps/places/templates/places/metadata/osm.html
+++ b/branches/extracting_oxford/molly/molly/apps/places/templates/places/metadata/osm.html
@@ -47,14 +47,14 @@
 
 <div class="note"><div class="bubble pad-10">
     This information is provided courtesy of
-    <a href="{% url maps:static_openstreetmap %}">OpenStreetMap</a> under a
+    <a href="{% url places:static_openstreetmap %}">OpenStreetMap</a> under a
     Creative Commons Attribution-ShareAlike 2.0 license.<br/>
     Oxford University provides this information without warranty.
 </div></div>
 
 <ul>
   <li class="round-bottom">
-    <a href="{% url maps:entity_update entity.identifier_scheme entity.identifier_value %}">
+    <a href="{% url places:entity_update entity.identifier_scheme entity.identifier_value %}">
       Suggest a correction
     </a>
   </li>
