--- a/branches/extracting_oxford/molly/molly/apps/places/templates/places/busstop.html
+++ b/branches/extracting_oxford/molly/molly/apps/places/templates/places/busstop.html
@@ -1,4 +1,4 @@
-{% extends "maps/base.html" %}
+{% extends "places/base.html" %}
 {% load maps %}
 
 {% block title %}m.ox | Bus stop: {{ entity.title }}{% endblock %}
