--- a/branches/extracting_oxford/molly/molly/apps/places/templates/places/entity_detail.html
+++ b/branches/extracting_oxford/molly/molly/apps/places/templates/places/entity_detail.html
@@ -1,10 +1,10 @@
-{% extends "maps/base.html" %}{% load maps %}{% load portal_misc %}
+{% extends "places/base.html" %}{% load maps %}{% load portal_misc %}
 
 {% block content %}
 
-{% include "maps/metadata/real_time_information.html" %}
-{% include "maps/metadata/oxpoints.html" %}
-{% include "maps/metadata/osm.html" %}
+{% include "places/metadata/real_time_information.html" %}
+{% include "places/metadata/oxpoints.html" %}
+{% include "places/metadata/osm.html" %}
 
 
 
@@ -36,15 +36,15 @@
 	
 	{% ifnotequal style_group "dumb" %}
     	<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
-    		{% include "maps/map_elements.html" %}
+    		{% include "places/map_elements.html" %}
     	</div>
     {% else %}
         <img src="{% map_url entity.location %}" alt="Map"><br />
-        {% include "maps/map_elements.html" %}
+        {% include "places/map_elements.html" %}
     {% endifnotequal %}
     
 	<ul>
-	    <li class="round-bottom"><a href="{% url maps:entity_nearby_list entity.identifier_scheme entity.identifier_value %}" rel="nofollow">Find things near here</a></li>
+	    <li class="round-bottom"><a href="{% url places:entity_nearby_list entity.identifier_scheme entity.identifier_value %}" rel="nofollow">Find things near here</a></li>
 	</ul>
 	{% else %}
 	    <div class="note"><div class="bubble">
