--- a/branches/extracting_oxford/molly/molly/apps/places/templates/places/entity_without_location.html
+++ b/branches/extracting_oxford/molly/molly/apps/places/templates/places/entity_without_location.html
@@ -1,4 +1,4 @@
-{% extends "maps/base.html" %}
+{% extends "places/base.html" %}
 
 {% block title %}m.ox | {{ entity_type.verbose_name_plural|capfirst }} near {% if entity %}{{ entity.type }}{% else %}me{% endif %}{% endblock %}
 
