--- a/branches/extracting_oxford/molly/molly/apps/places/templates/places/index.html
+++ b/branches/extracting_oxford/molly/molly/apps/places/templates/places/index.html
@@ -1,4 +1,4 @@
-{% extends "maps/base.html" %}{% load portal_misc %}{% load molly_apps_search %}
+{% extends "places/base.html" %}{% load portal_misc %}{% load molly_apps_search %}
 
 {% block content %}
 
@@ -29,7 +29,7 @@
       </div></div>
       <p>
         {{ search_form.query }}
-        <input type="hidden" name="application" value="maps">
+        <input type="hidden" name="application" value="places">
       </p><p>
         <button type="submit">Go!</button>
       </p>
@@ -45,8 +45,8 @@
   <h2>Browse Points of Interest</h2>
   {% include "geolocation/update_location_embed.html" %}
   <ul>
-    <li><a href="{% url maps:nearby_list %}">Near Me</a></li>
-    <li class="round-bottom"><a href="{% url maps:category_list %}">By Category</a></li>
+    <li><a href="{% url places:nearby_list %}">Near Me</a></li>
+    <li class="round-bottom"><a href="{% url places:category_list %}">By Category</a></li>
   </ul>
 </div>
 {# End Points of Interest #}
