--- a/branches/extracting_oxford/molly/molly/apps/places/templates/places/postcode.html
+++ b/branches/extracting_oxford/molly/molly/apps/places/templates/places/postcode.html
@@ -1,4 +1,4 @@
-{% extends "maps/base.html" %}
+{% extends "places/base.html" %}
 
 {% block content %}
 
@@ -16,7 +16,7 @@
 {% endifnotequal %}{% endfor %}
 {% endif %}
     <li class="round-bottom">
-    <a href="{% url maps_entity_nearby_list entity.entity_type.slug,entity.display_id %}" rel="nofollow">Find things near here</a>
+    <a href="{% url places:entity_nearby_list entity.entity_type.slug,entity.display_id %}" rel="nofollow">Find things near here</a>
     </li>
 </ul>
 </div>
