Moved most templates in molly.apps.home to be .html instead of .xhtml.

--- a/branches/extracting_oxford/molly/molly/apps/home/templates/home/desktop_about.html
+++ b/branches/extracting_oxford/molly/molly/apps/home/templates/home/desktop_about.html
@@ -18,7 +18,7 @@
               'popwin',
               'left=20,top=20,innerwidth=330,innerheight=480,toolbar=1,menubar=0,location=0,status=1,resizable=1,scrollbars=yes'
           );
-          popup.window.location.href = "{% url core_index %}" + "?preview=true";
+          popup.window.location.href = "{% url home:index %}" + "?preview=true";
       }
       
       function loaded() {
