--- a/branches/extracting_oxford/molly/molly/apps/home/templates/home/exposition/about.html
+++ b/branches/extracting_oxford/molly/molly/apps/home/templates/home/exposition/about.html
@@ -38,7 +38,7 @@
 <div class="preview">
   <p>Get Mobile Oxford on<br/>your device at:</p>
   
-  <p class="domain-link"><a class="preview-link" href="{% url core_index %}?preview=true">m.ox.ac.uk</a></p>
+  <p class="domain-link"><a class="preview-link" href="{% url home:index %}?preview=true">m.ox.ac.uk</a></p>
   
   <p>or select and scan<br/>a barcode below:</p>
   
@@ -51,7 +51,7 @@
   <hr/>
   
   <p class="preview-link">
-    <a class="preview-link" href="{% url core_index %}?preview=true">Preview the site<br/>on your computer</a>
+    <a class="preview-link" href="{% url home:index %}?preview=true">Preview the site<br/>on your computer</a>
   </p>
 </div>
 </div>
