--- a/branches/extracting_oxford/molly/molly/apps/home/templates/home/messages.html
+++ b/branches/extracting_oxford/molly/molly/apps/home/templates/home/messages.html
@@ -1,4 +1,4 @@
-{% extends "core/base.xhtml" %}
+{% extends "home/base.html" %}
 
 {% block pagetitle %}Messages{% endblock %}
 {% block title %}m.ox | Messages from the developers{% endblock %}
@@ -28,7 +28,7 @@
       <small>Left on <em>{{ form.instance.when|date:"D j M Y, g:i A" }}</em></small><br/>
     </li>
     <li>
-      <a href="{% url core_contact %}?referer={{ path }}&#35;{{ form.instance.when|date:"YmdHis" }}">Respond to this message</a>
+      <a href="{% url home:contact %}?referer={{ path }}&#35;{{ form.instance.when|date:"YmdHis" }}">Respond to this message</a>
     </li>
     <li class="non-link-item">
       {{ form.DELETE }} {{ form.DELETE.label_tag }}
