Improved nearby page in molly.apps.places.

--- a/branches/extracting_oxford/molly/molly/apps/places/templates/places/metadata/oxpoints.html
+++ b/branches/extracting_oxford/molly/molly/apps/places/templates/places/metadata/oxpoints.html
@@ -79,7 +79,7 @@
 <div class="section">
 	<h2>Images</h2>
 	{% for image in oxp.foaf_depiction %}
-		{% external_image image.uri asdiv %}
+		{ external_image image.uri asdiv }{# FIXME #}
 	{% endfor %}
 </div>
 {% endif %}
