Manually merged the last of places_rejig.

--- a/branches/extracting_oxford/molly/molly/apps/places/templates/places/busstop.html
+++ b/branches/extracting_oxford/molly/molly/apps/places/templates/places/busstop.html
@@ -1,4 +1,4 @@
-{% extends "maps/base.html" %}
+{% extends "places/base.html" %}
 {% load maps %}
 
 {% block title %}m.ox | Bus stop: {{ entity.title }}{% endblock %}
@@ -90,7 +90,7 @@ tr {
 
 <ul>
     <li class="round-bottom">
-    <a href="{% url places:entity_nearby_list entity.entity_type.slug,entity.display_id %}" rel="nofollow">Find things near here</a>
+    <a href="{% url maps:entity_nearby_list entity.entity_type.slug,entity.display_id %}" rel="nofollow">Find things near here</a>
     </li>
 </ul>
 
