--- a/branches/extracting_oxford/molly/molly/apps/places/templates/places/category_detail.html
+++ b/branches/extracting_oxford/molly/molly/apps/places/templates/places/category_detail.html
@@ -1,4 +1,4 @@
-{% extends "maps/base.html" %}
+{% extends "places/base.html" %}
 {% load portal_misc %}
 
 {% block pagetitle %}{{ entity_types.0.verbose_name_plural|capfirst }}{% endblock %}
