--- a/branches/extracting_oxford/molly/molly/apps/places/templates/places/entity_detail.html
+++ b/branches/extracting_oxford/molly/molly/apps/places/templates/places/entity_detail.html
@@ -1,10 +1,10 @@
-{% extends "maps/base.html" %}{% load maps %}{% load portal_misc %}
+{% extends "places/base.html" %}{% load maps %}{% load portal_misc %}
 
 {% block content %}
 
-{% include "maps/metadata/real_time_information.html" %}
-{% include "maps/metadata/oxpoints.html" %}
-{% include "maps/metadata/osm.html" %}
+{% include "places/metadata/real_time_information.html" %}
+{% include "places/metadata/oxpoints.html" %}
+{% include "places/metadata/osm.html" %}
 
 <div class="section">
     <h2>Map</h2>
@@ -12,11 +12,11 @@
 	
 	{% ifnotequal style_group "dumb" %}
     	<div class="backgrounded-image" style="background-image:url('{% map_url entity.location %}'); height:{{ map_height }}px">
-    		{% include "maps/map_elements.html" %}
+    		{% include "places/map_elements.html" %}
     	</div>
     {% else %}
         <img src="{% map_url entity.location %}" alt="Map"><br />
-        {% include "maps/map_elements.html" %}
+        {% include "places/map_elements.html" %}
     {% endifnotequal %}
     
 	<ul>
