--- a/molly/molly/geolocation/templates/geolocation/update_location_confirm.html
+++ b/molly/molly/geolocation/templates/geolocation/update_location_confirm.html
@@ -12,16 +12,16 @@
 {% endif %}
 
 <ul>
-{% for placemark in placemarks %}
+{% for result in results %}
     <li>
         <form method="post" action="{% url geolocation:update %}" class="submit-location-form">
-            <input type="hidden" name="name" value="{{ placemark.name }}"/>
-            <input type="hidden" name="longitude" value="{{ placemark.location.0 }}"/>
-            <input type="hidden" name="latitude" value="{{ placemark.location.1 }}"/>
-            <input type="hidden" name="accuracy" value="{{ placemark.accuracy }}"/>
+            <input type="hidden" name="name" value="{{ result.name }}"/>
+            <input type="hidden" name="longitude" value="{{ result.location.0 }}"/>
+            <input type="hidden" name="latitude" value="{{ result.location.1 }}"/>
+            <input type="hidden" name="accuracy" value="{{ result.accuracy }}"/>
             <input type="hidden" name="method" value="geocoded"/>
             <input type="hidden" name="return_url" value="{{ return_url|default:"" }}"/>
-            <button class="submit-location-form-button" type="submit" name="index" style="width:100%">{{ forloop.counter }}. {{ placemark.name }}</button>
+            <button class="submit-location-form-button" type="submit" name="index" style="width:100%">{{ forloop.counter }}. {{ result.name }}</button>
         </form>
     </li>
 {% endfor %}
