Tidied up RSS apps.

--- a/molly/molly/apps/rss/templates/rss/events/item_list.html
+++ b/molly/molly/apps/rss/templates/rss/events/item_list.html
@@ -1,4 +1,4 @@
-{% extends "rss/base.xhtml" %}{% load portal_misc %}
+{% extends "rss/events/base.html" %}{% load portal_misc %}
 
 {% block content %}
 
