--- a/molly/molly/apps/rss/templates/rss/news/index.html
+++ b/molly/molly/apps/rss/templates/rss/news/index.html
@@ -1,8 +1,4 @@
-{% extends "rss/base.xhtml" %}
-
-{% block pagetitleclass %}rss-header with-icon{% endblock %}
-{% block pagetitle %}News feeds{% endblock %}
-{% block title %}m.ox | News feeds{% endblock %}
+{% extends "rss/news/base.html" %}
 
 {% block content %}
 
