--- a/molly/molly/apps/rss/templates/rss/news/item_list.html
+++ b/molly/molly/apps/rss/templates/rss/news/item_list.html
@@ -1,4 +1,4 @@
-{% extends "rss/base.xhtml" %}{% load portal_misc %}
+{% extends "rss/news/base.html" %}{% load portal_misc %}
 
 {% block breadcrumbs %}
 {{ block.super }}
