--- a/molly/molly/apps/rss/templates/rss/events/item_detail.html
+++ b/molly/molly/apps/rss/templates/rss/events/item_detail.html
@@ -1,4 +1,4 @@
-{% extends "rss/base.xhtml" %}{% load maps %}
+{% extends "rss/events/base.html" %}{% load maps %}
 
 {% block breadcrumbs %}
 {{ block.super }}
