--- a/mollyproject.org/base.css
+++ b/mollyproject.org/base.css
@@ -1,94 +1,48 @@
-body {
-  font-family: "Liberation Sans", Arial, sans-serif;
-  margin: 0;
+h2 {margin-bottom: 0.4em;}
+
+h3 {margin-bottom: 0.3em;
+	font-size: 1.3em;}
+
+a { color: #373F7A;
+	text-decoration: none;}
+a:hover {text-decoration: underline;}
+
+#header {
+	background-color: #cfecef;
+ 	background: -moz-linear-gradient(bottom, #cfecef 0%, #fff 100%);
+ 	background: -webkit-gradient(linear, left bottom, left top, from(#cfecef), to(#fff));
+ 	border-bottom: 1px solid #aaa;
+}
+#header .container {position: relative;}
+#header h1 {
+	font-size: 6em;
+	font-weight: bold;
+	text-shadow: 2px 2px 7px #999;
+	margin-bottom: 10px;
 }
 
-a img {
-  border:0px;
+#header ul {list-style:none; 
+	margin: 0;
+	position: absolute;
+	top: 70px;
+	right: 0;
+	font-size: 1.2em;
 }
-
-header {
-  background-color: #cfecef;
+#header ul li {
+	display:inline;
+	padding: 0.5em 1em;
+    border-left: 1px solid #ccc;
 }
+#header ul li.first {border: 0;}
+#header p {margin-bottom: 1em;}
 
-header h1 {
-  margin:0;
-  font-size:4em;
-}
+#main {margin-top: 2em;}
 
-header aside {
-  font-style:italic;
-}
-
-header, aside, article {
-  padding: 1em;
-  display: block;
-}
-
-header aside {
-  padding: 0;
-}
-
-#aside-links {
-  width: 16em;
-  float: right;
-  background-color: #f6fcfc;
-  margin: 1em;
-}
-
-#aside-links h2 {
-  margin-top: 0;
-}
-
-#aside-links ul {
-  list-style: none;
-  padding: 0;
-}
-
-#aside-links ul a {
-  font-size:11pt;
-}
-
-a {
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-#aside-links footer {
-  text-align:center;
-}
-
-#aside-links footer p {
-  margin-bottom: 0;
-}
-
-article {
-  margin-right:19em;
-}
-
-#sec-features dl {
-  column-count: 2;
-  -moz-column-count: 2;
-  -moz-column-width: 20em;
-}
-
-#sec-features dt {
-  font-weight: bold;
-}
-
-#sec-features dd {
-  margin-left:1em;
-  margin-bottom:1em;
-}
-
-#sec-features dd p:first-child {
-  margin-top: 0;
-}
-
-strong {
-  color:#434f19;
-  background-color:#f7faef;
+#sidebar {margin-top: 2em;}
+#sidebar h2 {display:none;}
+#sidebar ul {
+	list-style:none;
+	padding-left: 0;
+	margin-right: 0.3em;
+	font-size: 0.9em;
 }
