--- a/molly/molly/apps/podcasts/templates/podcasts/index.html
+++ b/molly/molly/apps/podcasts/templates/podcasts/index.html
@@ -38,7 +38,7 @@
 </div>
 
 <ul class="stand-alone">
-	<li class="round-bottom round-top"><a href="{% url podcasts:top_downloads %}">Top downloads from iTunes U</a></li>
+	<li class="round-bottom round-top"><a href="{% url podcasts:podcast "top-downloads" %}">Top downloads from iTunes U</a></li>
 </ul>
 
 
