--- a/molly/demos/molly_oxford/site-media/css/groups/smart.css
+++ b/molly/demos/molly_oxford/site-media/css/groups/smart.css
@@ -146,7 +146,8 @@ div#bc-title h1.webcams-header {  background-image:url('../../png/index-icons/we
 div#bc-title h1.podcasts-header { background-image:url('../../png/index-icons/podcasts-bc.png');}
 div#bc-title h1.results-header {  background-image:url('../../png/index-icons/results-bc.png');}
 div#bc-title h1.library-header {    background-image:url('../../png/index-icons/library-bc.png');}
-div#bc-title h1.rss-header {      background-image:url('../../png/index-icons/rss-bc.png');}
+div#bc-title h1.news-header {      background-image:url('../../png/index-icons/news-bc.png');}
+div#bc-title h1.events-header {      background-image:url('../../png/index-icons/events-bc.png');}
 div#bc-title h1.weather-header {  background-image:url('../../png/index-icons/weather-bc.png');}
 div#bc-title h1.service_status-header {  background-image:url('../../png/index-icons/service_status-bc.png');}
 div#bc-title h1.weblearn-header {  background-image:url('../../png/index-icons/weblearn-bc.png');}
