Added a fake console when one doesn't already exist.

--- a/molly/demos/molly_oxford/templates/base.xhtml
+++ b/molly/demos/molly_oxford/templates/base.xhtml
@@ -23,6 +23,9 @@
         var base = "{% url home:index %}";
         var positionName = {% if preferences.location.name %}"{{ preferences.location.name|escapejs }}"{% else %}null{% endif %};
         var current_url = "";
+        
+        if (!window.console)
+            window.console = { log : function() {} };
 
         function to_absolute(url) {
             if (url.match(/http\:\/\//)) {
