--- a/molly/demos/molly_oxford/site-media/css/base.css
+++ b/molly/demos/molly_oxford/site-media/css/base.css
@@ -194,3 +194,19 @@ div.submit-line input[type="image"] {
     padding:0;
     
 }*/
+
+table.real-time-information {
+    width: 100%;
+    background: #121C28;
+    color: #FFBF00;
+    border: 2px solid #FFBF00;
+    -webkit-border-radius: 8px;
+    padding: 2px 0;
+}
+
+table.real-time-information tr {
+
+    border-collapse: collapse;
+    border-top: 1px solid #FFBF00;
+}
+
