--- a/molly/demos/molly_oxford/templates/base.xhtml
+++ b/molly/demos/molly_oxford/templates/base.xhtml
@@ -7,25 +7,29 @@
     <meta name="viewport" content="width=device-width; initial-scale=1; user-scalable=no; maximum-scale=1; minimum-scale=1"/>
     <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 
-{% if device|device_has_parent:"apple_iphone_ver1" %}
-    <link rel="apple-touch-icon" href="{{ MEDIA_URL}}png/apple-touch-icon.png"/>
-    <link rel="apple-touch-startup-image" href="{{ MEDIA_URL}}png/apple-touch-startup-image.jpg">
-	<meta name="apple-mobile-web-app-capable" />
-	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-	<meta name="format-detection" content="telephone=no" />
-{% endif %}
-
 {% if use_javascript %}
-    <script src="{{ MEDIA_URL }}js/jquery-1.3.2.js"  type="text/javascript"> </script>
     <script type="text/javascript">
         var require_location = {{ require_location|yesno:"true,false" }};
         var base = "{% url home:index %}";
         var positionName = {% if preferences.location.name %}"{{ preferences.location.name|escapejs }}"{% else %}null{% endif %};
     </script>
+{% endif %} 
+
+    <link rel="stylesheet" href="{{ MEDIA_URL }}css/groups/{{ style_group }}.css" type="text/css" />
+    <link rel="icon" type="image/png" href="{{ MEDIA_URL }}png/favicon.png"/>
+
+{% if device|device_has_parent:"apple_iphone_ver1" %}
+    <link rel="apple-touch-icon" href="{{ MEDIA_URL}}png/apple-touch-icon.png"/>
+    <link rel="apple-touch-startup-image" href="{{ MEDIA_URL}}png/apple-touch-startup-image.jpg">
+    <meta name="apple-mobile-web-app-capable" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="format-detection" content="telephone=no" />
+{% endif %}
+
+{% if use_javascript %}
+    <script src="{{ MEDIA_URL }}js/jquery-1.3.2.js"  type="text/javascript"> </script>
     <script src="{{ MEDIA_URL }}js/groups/{{ style_group }}.js"  type="text/javascript"> </script>
 {% endif %}
-    <link  rel="stylesheet" href="{{ MEDIA_URL }}css/groups/{{ style_group }}.css" type="text/css" />
-	<link rel="icon" type="image/png" href="{{ MEDIA_URL }}png/favicon.png"/>
 {% block extrahead %}{% endblock %}
 </head>
 
@@ -38,7 +42,7 @@
     <div id="bc-header">
       <ol id="bc">
         <li><a href="{% url home:index %}">
-          <img src="{{ MEDIA_URL }}png/logo.png" alt="Home"/>
+          <img src="{{ MEDIA_URL }}png/logo.png" width="57" height="30" alt="Home"/>
         </a></li>
     {% if breadcrumbs.2 %}
         <li><a href="{{ breadcrumbs.1.1 }}" title="{{ breadcrumbs.1.0 }}">
@@ -97,7 +101,6 @@
 {% block bottom_links %}    
         <a href="{% url feedback:index %}?referer={{ full_path|urlencode }}">Provide feedback for this page.</a><br />
 		<a href="http://chart.apis.google.com/chart?cht=qr&amp;chs={{ device.max_image_width }}x{{ device.max_image_width }}&amp;chl=http://m.ox.ac.uk{{ full_path|urlencode }}">2D Barcode for this page</a><br/>
-		<a rel="nofollow" href="{% url url_shortener:shorten %}?path={{ full_path|urlencode }}">Get short link for this page</a>
 {% endblock %}
     </div>
 {% endif %}
