--- a/molly/molly/apps/places/templates/places/metadata/real_time_information.html
+++ b/molly/molly/apps/places/templates/places/metadata/real_time_information.html
@@ -1,8 +1,10 @@
 {% if entity.metadata.real_time_information %}
 
+  <h2>Real-time departure information - {% now "G:i:s "%}</h2>
+
   {% if entity.metadata.real_time_information.services %}
 <div class="pad-5">
-<table>
+<table class="real-time-information">
     <thead style="display:none;">
         <tr>
             <th>Service</th>
@@ -34,5 +36,8 @@
     {% endif %}
 </div></div>
   {% endif %}
+
+{% else %}
+  <h2>Map</h2>
 
 {% endif %}
