added minified version of async loader script

--- a/molly/demos/molly_oxford/templates/base.xhtml
+++ b/molly/demos/molly_oxford/templates/base.xhtml
@@ -15,7 +15,7 @@
 {% endif %}
 {% if use_javascript %}
     <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js" type="text/javascript"> </script> -->
-    <script src="{{ MEDIA_URL }}js/jquery-1.4.1.js"  type="text/javascript"> </script>
+    <script src="{{ MEDIA_URL }}js/jquery-1.4.1.min.js"  type="text/javascript"> </script>
     <script type="text/javascript">
         var require_location = {{ require_location|yesno:"true,false" }};
         var base = "{% url home:index %}";
@@ -25,7 +25,7 @@
             window.console = { log : function() {} };
 
     </script>
-    <script src="{{ MEDIA_URL }}js/async_load.js" type="text/javascript"> </script>
+    <script src="{{ MEDIA_URL }}js/async_load.min.js" type="text/javascript"> </script>
     <script src="{{ MEDIA_URL }}js/groups/{{ style_group }}.js"  type="text/javascript"> </script>
 {% endif %}
     <link  rel="stylesheet" href="{{ MEDIA_URL }}css/groups/{{ style_group }}.css" type="text/css" />
