updates to cache manifest

--- a/molly/demos/molly_oxford/templates/base.xhtml
+++ b/molly/demos/molly_oxford/templates/base.xhtml
@@ -1,7 +1,5 @@
 {% load portal_misc %}<!DOCTYPE HTML>
-{# <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB" manifest="{{ MEDIA_URL }}cache/devices/iphone.manifest" > #}
-
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB" >
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-GB" lang="en-GB" manifest="/static/app-cache.manifest">
 <head>
     <title>{% block title %}m.ox | {{ breadcrumbs.4 }}{% endblock %}</title>
     <meta name="viewport" content="width=device-width; initial-scale=1; user-scalable=no; maximum-scale=1; minimum-scale=1"/>
