--- a/molly/demos/molly_oxford/templates/base.xhtml
+++ b/molly/demos/molly_oxford/templates/base.xhtml
@@ -7,9 +7,9 @@
 {% if device|device_has_parent:"apple_iphone_ver1" %}
     <link rel="apple-touch-icon" href="{{ MEDIA_URL}}png/apple-touch-icon.png"/>
     <link rel="apple-touch-startup-image" href="{{ MEDIA_URL}}png/apple-touch-startup-image.jpg">
-	<meta name="apple-mobile-web-app-capable" content="yes" />
-	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
-	<meta name="format-detection" content="telephone=no" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <meta name="format-detection" content="telephone=no" />
 {% endif %}
 {% if use_javascript %}
     <!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.1/jquery.min.js" type="text/javascript"> </script> -->
@@ -19,21 +19,21 @@
         var base = "{% url home:index %}";
         var positionName = {% if preferences.location.name %}"{{ preferences.location.name|escapejs }}"{% else %}null{% endif %};
 
-        if (!window.console)
+        if (!window.console) {
             window.console = { log : function() {} };
-
+        }
     </script>
     <script src="{{ MEDIA_URL }}js/async_load.min.js" type="text/javascript"> </script>
     <script src="{{ MEDIA_URL }}js/groups/{{ style_group }}.js"  type="text/javascript"> </script>
 {% endif %}
     <link  rel="stylesheet" href="{{ MEDIA_URL }}css/groups/{{ style_group }}.css" type="text/css" />
-	<link rel="icon" type="image/png" href="{{ MEDIA_URL }}png/favicon.png"/>
+    <link rel="icon" type="image/png" href="{{ MEDIA_URL }}png/favicon.png"/>
 {% block extrahead %}{% endblock extrahead %}
 </head>
 
 <body>
 {% block body %}
-<div id="loading" style="display:none;"><img src="{{ MEDIA_URL }}/gif/ajax-loader.gif" /></div>
+<div id="loading-bg"> <div id="loading-img"><img align="center" style="position:fixed; left: 40%;" src="{{ MEDIA_URL }}gif/ajax-loader.gif"/></div> </div>
 
 {% block header %}
 
