--- a/molly/molly/apps/home/templates/home/exposition/container.html
+++ b/molly/molly/apps/home/templates/home/exposition/container.html
@@ -14,71 +14,6 @@
         <meta http-equiv="Content-type" content="text/html;charset=UTF-8" />
 	<script src="{{ MEDIA_URL }}js/jquery-1.3.2.js" type="text/javascript"> </script>
 	<script src="{{ MEDIA_URL }}js/jquery.lightbox-0.5.min.js" type="text/javascript"> </script>
-    <style type="text/css">
-      div.navigation {
-        text-align:center;
-        position:absolute;
-        bottom:0;
-      }
-      
-      div.navigation ul {
-        list-style: none;
-        margin:15px 0;
-        padding:0;
-      }
-      
-      div.navigation li {
-        display:inline;
-        
-      }
-      
-      div.navigation a {
-        padding:5px 8px;
-        margin:5px 2px;
-        font-size:12pt;
-        color:#ffffff;
-        text-shadow: #000000 1px 1px 2px;
-      }
-      
-      div.navigation li.selected a {
-        border-bottom:1px solid #ffffff;
-        border-top:1px solid #ffffff;
-      }
-
-      div.navigation a:hover {
-        color: #002147;
-        text-shadow: none;
-        text-shadow: #ffffff 0px 0px 5px;
-      }
-      
-      div#spinner {
-        display:none;
-        position:relative;
-        top:20px;
-        width:100%;
-        left:auto;
-        right:auto;
-        text-align:center;
-      }
-      
-      div#spinner span {
-        display:block;
-        padding:20px;
-        -moz-border-radius:20px;
-        -webkit-border-radius:20px;
-        -khtml-border-radius:20px;
-        background-color:#ffffff;
-        height:32px;
-        width:32px;
-        margin-left:auto;
-        margin-right:auto;
-      }
-      
-      
-      h2 {
-        display: none;
-      }
-    </style>
     <script type="text/javascript" src="{{ MEDIA_URL }}js/desktop_about.js">
               
           
@@ -129,7 +64,7 @@
     <img src="{{ MEDIA_URL }}png/jisc-logo.png" width="100" height="52" alt="JISC" style="position:relative; top:0px;" />
   </a>
   <a href="http://erewhon.oucs.ox.ac.uk/">
-    <img src="{{ MEDIA_URL }}png/erewhon-logo.png" width="150" height="60" alt="JISC" style="position:relative; top:9px;" />
+    <img src="{{ MEDIA_URL }}png/erewhon-logo.png" width="150" height="60" alt="Erewhon Project" style="position:relative; top:9px;" />
   </a>
   <a href="http://www.oucs.ox.ac.uk/">
     <img src="{{ MEDIA_URL }}png/oucs-logo.png" width="254" height="63" alt="OUCS" style="position:relative; top:2px;" />
