Fixed redirect after geolocation update.

--- a/molly/molly/geolocation/templates/geolocation/require_location.html
+++ b/molly/molly/geolocation/templates/geolocation/require_location.html
@@ -6,7 +6,7 @@
   <h2>Location required</h2>
 
   <div class="note"><div class="bubble pad-10">
-    To be able to use this feature you need to <a href="{% url core_update_location %}?return_url={{ return_url|urlencode }}">choose a location</a>.
+    To be able to use this feature you need to <a href="{% url geolocation:index %}?return_url={{ return_url|urlencode }}">choose a location</a>.
   </div></div>
 </div>
 
