--- a/molly/molly/geolocation/templates/geolocation/update_location_confirm.html
+++ b/molly/molly/geolocation/templates/geolocation/update_location_confirm.html
@@ -14,7 +14,7 @@
 <ul>
 {% for result in results %}
     <li>
-        <form method="post" action="{% url geolocation:update %}" class="submit-location-form">
+        <form method="post" action="{% url geolocation:index %}" class="submit-location-form">
             <input type="hidden" name="name" value="{{ result.name }}"/>
             <input type="hidden" name="longitude" value="{{ result.location.0 }}"/>
             <input type="hidden" name="latitude" value="{{ result.location.1 }}"/>
