Add reference to molly in the desktop about page footer.

--- a/molly/molly/apps/home/templates/home/exposition/container.html
+++ b/molly/molly/apps/home/templates/home/exposition/container.html
@@ -85,6 +85,8 @@
   </ul>
 
   <p>Contact us at <a href="mailto:mobileoxford@oucs.ox.ac.uk">mobileoxford@oucs.ox.ac.uk</a> should you have any problems, suggestions, or comments.</p>
+
+  <p>Mobile Oxford is built on the open-source <a href="http://mollyproject.org/">Molly Project</a>.</p>
 </div></div>
 {% endblock %}
   </body>
