--- a/molly/molly/geolocation/templates/geolocation/update_location_embed.html
+++ b/molly/molly/geolocation/templates/geolocation/update_location_embed.html
@@ -30,7 +30,7 @@
 
 {% else %}
 
-<form method="get" action="{% url geolocation:index %}" class="manual-update-form">
+<form method="post" action="{% url geolocation:index %}" class="manual-update-form">
         <label for="location-name">Set a new location</label>:
         <input id="return_url" name="return_url" type="hidden" value="{{ return_url|default:"" }}"/>
         <input id="location-name" name="name" value="{{ location }}"/>
