--- a/molly/demos/molly_oxford/site-media/css/groups/smart.css
+++ b/molly/demos/molly_oxford/site-media/css/groups/smart.css
@@ -1,3 +1,5 @@
+.invisible {display:none;}
+
 body {
     background:#bbc4ce url('../../png/new/gradients/backdrop-iphone.png') repeat-x top;
 
@@ -9,6 +11,7 @@ body {
     text-align: left;
     margin: 0; 
 }
+
 
 /* Index Page Specific 
     - 1 CSS 2.1 Selector
@@ -37,15 +40,8 @@ div#index-search input[type="text"] {
     width: 125px;
     font-size:1.2em;
     border: 2px solid #dddddd;
-    -webkit-border-top-left-radius: 5px;
-    -webkit-border-bottom-left-radius: 5px;
-    -webkit-border-top-right-radius:0;
-    -webkit-border-bottom-right-radius:0;
-    
-    -moz-border-radius-topleft: 5px;
-    -moz-border-radius-bottomleft: 0px;
-    -moz-border-radius-topright: 0px;
-    -moz-border-radius-bottomright: 0px;
+    -webkit-border-top-left-radius: 5px; -webkit-border-bottom-left-radius: 5px; -webkit-border-top-right-radius:0; -webkit-border-bottom-right-radius:0;
+    -moz-border-radius-topleft: 5px; -moz-border-radius-bottomleft: 5px; -moz-border-radius-topright: 0px; -moz-border-radius-bottomright: 0px;
 }
 /* icon-menu & menu-x handles the menu icons on the front page 
     - this section would ideally be rewritten to handle a little more gracefully on varied sizes of screens */
@@ -82,7 +78,6 @@ li#menu-weather {background-image:url('../../png/index-icons/weather.png');}
 li#menu-weblearn {background-image:url('../../png/index-icons/weblearn.png');}
 li#menu-service_status {background-image:url('../../png/index-icons/service_status.png');}
 /* End Index Page Specific */
-
 
 
 
@@ -214,6 +209,7 @@ h2 {
     color:white;
     padding: 5px 0; margin: 0;
 }
+
 h3 {
     color:white;
     padding: 5px 5px; margin: 0;
@@ -369,6 +365,40 @@ div.form button[type="submit"] {
 /* End Forms/Search */
 
 
+/* New Standard Search Form */
+
+table.search {
+    padding: 0 10px;
+    width:100%;
+}
+table tbody td {padding: 0; margin: 0;}
+table tbody tr {padding: 0; margin: 0;}
+
+/* CSS 2.1 selector */
+table.search * input[type="text"] {
+    float:left;
+    width:100%;
+    height:30px;
+    border:0;
+    padding: 2px 0 2px 2px;
+    margin: 0;
+    font-size: 20px;
+    -webkit-border-top-left-radius: 5px; -webkit-border-bottom-left-radius: 5px;
+    -webkit-border-top-right-radius:0; -webkit-border-bottom-right-radius:0;
+    -moz-border-radius-topleft: 5px; -moz-border-radius-bottomleft: 5px;
+    -moz-border-radius-topright: 0px; -moz-border-radius-bottomright: 0px;
+}
+
+/* CSS 2.1 selector */
+table.search * input[type="image"] {
+    position: relative;
+    margin:0; padding:0;
+    border:0;
+    float:left;
+}
+/* End New Standard Search Form */
+
+
 
 /* OUCS Status */
 ul.service-status li {
@@ -385,6 +415,47 @@ ul.service-status li.service-status-down { background-image:url('../../png/icons
 span.service-status, span.service-detail { font-size:90%; }
 span.service-detail { font-style:italic; }
 /* End OUCS Status */
+
+
+
+/* Help Bubble */
+.help-bubble {
+    position:relative;
+    padding:6px;
+    margin:1em 0.5em 1em;
+    color:#000;
+    background:#dfdfdf;
+    width:auto;
+    
+    -moz-border-radius:10px; -webkit-border-radius:10px; border-radius:10px;
+    
+    background:-webkit-gradient(linear, left top, left bottom, from(#dfdfdf), to(#fff));
+    background:-moz-linear-gradient(top, #dfdfdf, #fff);
+    background:-o-linear-gradient(top, #dfdfdf, #fff);
+    background:linear-gradient(top, #dfdfdf, #fff);
+    
+    -moz-box-shadow: 2px 2px 2px #333; -webkit-box-shadow: 2px 2px 2px #333; box-shadow: 2px 2px 2px #333;
+}
+
+.help-bubble:after {
+    content:"\00a0";
+    display:block;
+    position:absolute;
+    z-index:-1;
+    top:-30px; /* value = - border-top-width - border-bottom-width */
+    left:40px; /* controls horizontal position */    
+    width:0;
+    height:0;
+    border-width:18px 18px; /* vary these values to change the angle of the vertex */
+    border-style:solid;
+    border-color:#dfdfdf transparent transparent;
+    bottom:auto;
+	left:auto;
+	border-color:transparent transparent #dfdfdf;
+}
+/* End Help Bubble */
+
+
 
 table.real-time-information {
     width: 100%;
